# 2020-thesis

./: .editorconfig  .gitignore  .gitmodules  .markdownlintrc  .pre-commit-config.yaml  README.md  VISION.md  incremental-demo.wast
.binder/: postBuild  requirements.txt
benchmarks/abstype-overhead/: benchmark-ec2.tsv  benchmark.1313.tsv  benchmark.sh  benchmark.tsv  overhead-1-abstype.wast  overhead-1-core.wast
benchmarks/jit-inlining/: .gitignore  Cargo.toml  README.md  benchmark-ec2-2.tsv  benchmark-ec2.tsv  benchmark-with-node.sh  benchmark-with-wasmtime.sh  benchmark.js  benchmark.tsv  compile-and-run.js  compile-with-wasmtime.sh  jit-test-1a.wast  jit-test-1b.wast  jit-test-1c-lib.wast  jit-test-1c-main.wast  node-wasm-bench.js
demo-rust-embedded-wasmtime/: Cargo.toml  README.md
demo-zig-interop-on-wasm/: run.js
demo02-zig-interop-on-wasm/: Makefile  run.js
demo03-zig-rust-interop-on-js-wasm/: run.js
demo04-zig-lys-interop-on-rust-wasm/: Makefile
demo04-zig-lys-interop-on-rust-wasm/src_lys/: keccak-api.lys
demo05-zig-stack-adt/: Makefile
demo06-zig-stack-adt-rust-consumer/: append-wat-snippet.sh  run.js
demo07-webp/: output.wasm  webp.c
demo08-icns/: Cargo.toml  README.md
demo08-icns/src_rs/: lib.rs
ex1-user-auth/: README.md
exploration/: README.md
samples/: generate-notebook.py  sample-2.2-abstypes.wast  sample-2.2-abstypes.wat  sample-3.1.wat  sample-3.2.wast  sample-3.6-abstypes.wast  sample-4.2-abstypes.wast  samples.ipynb
test01-identity-wasm/: identity.wasm  identity.wat
wasmtime-demo/: .gitignore  Cargo.toml  hello.wat
(+16 files in other folders)
