[package]
name = "lib-rust"
version = "0.1.0"
authors = ["Alex Wendland <me@alexwendland.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src_rs/lib.rs"

[dependencies]
wasm-bindgen = "0.2.58"
wee_alloc = "0.4.5"
icns = "0.3.0"
